backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: backendapp
  labels:
    app: backendapp

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backendapp

  template:
    metadata:
      labels:
        app: backendapp

    spec:
      containers:
      - name: backendapp
        image: dharun0406/movie-backend
        imagePullPolicy: Always

        ports:
        - name: backendapp-port
          containerPort: 8080
