db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: moviedb

spec:
  serviceName: moviedb-service

  replicas: 1

  selector:
    matchLabels:
      app: moviedb

  template:
    metadata:
      labels:
        app: moviedb

    spec:
      containers:
      - name: mongodb
        image: mongo:7.0

        ports:
        - name: moviedb-port
          containerPort: 27017

        volumeMounts:
        - name: mongo-data
          mountPath: /data/db


  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: manual
      resources:
        requests:
          storage: 10Gi
