backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service

spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: backendapp-port
  
  selector:
    app: backendapp
  
  type: ClusterIP
