frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendservice

spec:
  selector:
    app: frontendapp
  
  ports:
  - port: 80
    targetPort: frontend-port
