frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-ingress
  labels:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
  - host: woljinx.xyz
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: frontendapp-service
            port: 
              number: 80
